--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Python
+*.pyc
+__pycache__/
+*.egg-info*
+dist/
+env/
+venv/
+venv3/
+.venv/
+.pytest_cache
+
+# JavaScript
+bundle.js
+*node_modules*
+files_for_autograder_io/
+*/var/*
+
+# Virtual Machines
+.vagrant/
+
+# Text editors and IDEs
+*~
+*.lock
+*.swp
+.vscode
+.ropeproject/
+.vscode/
+.idea
+
 # dependencies
 /node_modules
 /.pnp
