--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://evanhcohen.github.io/portfolio",
+  "homepage": "https://evancohen.dev",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
